--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-android": "vite build --mode android"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
