--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@tanstack/react-query": "^4.19.0",
+    "@tanstack/react-query-devtools": "^4.19.0",
     "antd": "^4.24.1",
+    "axios": "^1.2.0",
     "framer-motion": "^7.6.6",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
