--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "select-philippines-address": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
