--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "moment": "^2.29.4",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "select-philippines-address": "^1.0.6"
+    "select-philippines-address": "^1.0.6",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
