--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.18",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.3",
     "vite": "^3.2.3"
