--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-query-devtools": "^4.19.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-highlight-words": "^0.16.4",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.35.0",
