--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "npm run lint \nvite build",
     "preview": "vite preview --host",
     "build-android": "vite build --mode android",
     "build-dev": "vite build --mode development --sourcemap",
-    "lint": "prettier src --check && eslint src",
+    "lint": "npx prettier src --check \nnpx eslint src --ext js,jsx",
     "format": "prettier src --write"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@tanstack/react-query": "^4.19.0",
-    "@tanstack/react-query-devtools": "^4.19.0",
-    "aicommits": "^1.1.0",
     "antd": "^4.24.1",
     "axios": "^1.2.0",
     "framer-motion": "^7.6.6",
@@ -30,6 +28,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.19.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
