--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite --host",
     "build": "npm run lint \nnpx vite build",
     "preview": "vite preview --host",
-    "build-android": "vite build --mode android",
-    "build-dev": "vite build --mode development --sourcemap",
+    "build:android": "cross-env NODE_ENV=production VITE_PLATFORM=android vite build",
+    "build:dev": "vite build --mode development --sourcemap",
     "lint": "npx prettier src --check \nnpx eslint src --ext js,jsx",
     "format": "prettier src --write"
   },
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
