--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
+    "react-router-prompt": "^0.5.2",
     "react-scroll-to-bottom": "^4.2.0",
     "styled-components": "^5.3.6"
   },
