--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^4.19.0",
     "antd": "^4.24.1",
     "axios": "^1.2.0",
+    "daisyui": "^2.51.3",
     "framer-motion": "^7.6.6",
     "moment": "^2.29.4",
     "otp-input-react": "^0.3.0",
