--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
+    "laravel-echo": "^1.15.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "pusher-js": "^8.0.1",
     "tailwindcss": "^3.2.3",
     "vite": "^3.2.3"
   }
