--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,79 +1,79 @@
 {
-    "[javascriptreact]": {
-      "editor.tabSize": 2,
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "[javascriptreact]": {
+    "editor.tabSize": 2,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.tabSize": 2,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true,
+    "source.organizeImports": true,
+    "source.sortMembers": true
+  },
+  "peacock.color": "#007ACC",
+  "peacock.favoriteColors": [
+    {
+      "name": "Angular Red",
+      "value": "#dd0531"
     },
-    "[javascript]": {
-      "editor.tabSize": 2,
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    {
+      "name": "Azure Blue",
+      "value": "#007fff"
     },
-    "[jsonc]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    {
+      "name": "JavaScript Yellow",
+      "value": "#f9e64f"
     },
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll": true,
-      "source.organizeImports": true,
-      "source.sortMembers": true
+    {
+      "name": "Mandalorian Blue",
+      "value": "#1857a4"
     },
-    "peacock.color": "#007ACC",
-    "peacock.favoriteColors": [
-      {
-        "name": "Angular Red",
-        "value": "#dd0531"
-      },
-      {
-        "name": "Azure Blue",
-        "value": "#007fff"
-      },
-      {
-        "name": "JavaScript Yellow",
-        "value": "#f9e64f"
-      },
-      {
-        "name": "Mandalorian Blue",
-        "value": "#1857a4"
-      },
-      {
-        "name": "Node Green",
-        "value": "#215732"
-      },
-      {
-        "name": "React Blue",
-        "value": "#61dafb"
-      },
-      {
-        "name": "Something Different",
-        "value": "#832561"
-      },
-      {
-        "name": "Svelte Orange",
-        "value": "#ff3d00"
-      },
-      {
-        "name": "Vue Green",
-        "value": "#42b883"
-      }
-    ],
-    "peacock.remoteColor": "blue",
-    "workbench.colorCustomizations": {
-      "activityBar.activeBackground": "#3333ff",
-      "activityBar.background": "#3333ff",
-      "activityBar.foreground": "#e7e7e7",
-      "activityBar.inactiveForeground": "#e7e7e799",
-      "activityBarBadge.background": "#600000",
-      "activityBarBadge.foreground": "#e7e7e7",
-      "commandCenter.border": "#e7e7e799",
-      "sash.hoverBorder": "#3333ff",
-      "statusBar.background": "#0000ff",
-      "statusBar.foreground": "#e7e7e7",
-      "statusBarItem.hoverBackground": "#3333ff",
-      "statusBarItem.remoteBackground": "#0000ff",
-      "statusBarItem.remoteForeground": "#e7e7e7",
-      "titleBar.activeBackground": "#0000ff",
-      "titleBar.activeForeground": "#e7e7e7",
-      "titleBar.inactiveBackground": "#0000ff99",
-      "titleBar.inactiveForeground": "#e7e7e799"
+    {
+      "name": "Node Green",
+      "value": "#215732"
+    },
+    {
+      "name": "React Blue",
+      "value": "#61dafb"
+    },
+    {
+      "name": "Something Different",
+      "value": "#832561"
+    },
+    {
+      "name": "Svelte Orange",
+      "value": "#ff3d00"
+    },
+    {
+      "name": "Vue Green",
+      "value": "#42b883"
     }
-  }
-  
+  ],
+  "peacock.remoteColor": "blue",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#3333ff",
+    "activityBar.background": "#3333ff",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#600000",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#3333ff",
+    "statusBar.background": "#0000ff",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#3333ff",
+    "statusBarItem.remoteBackground": "#0000ff",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#0000ff",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#0000ff99",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "githubPullRequests.ignoredPullRequestBranches": ["master"]
+}
