--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@tanstack/react-query": "^4.19.0",
-    "antd": "^4.24.1",
+    "antd": "^5.4.0",
     "axios": "^1.2.0",
     "daisyui": "^2.51.3",
     "framer-motion": "^7.6.6",
@@ -42,10 +42,13 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
     "laravel-echo": "^1.15.0",
+    "less": "^4.1.3",
+    "less-plugin-remove-antd-global-styles": "^1.0.2",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "pusher-js": "^8.0.1",
+    "sass": "^1.61.0",
     "tailwindcss": "^3.2.3",
     "vite": "^3.2.3"
   }
