--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@jitsi/react-sdk": "^1.3.0",
     "@tanstack/react-query": "^4.19.0",
     "antd": "^5.4.0",
     "axios": "^1.2.0",
